FEAT: Use requests to consume Random Word API

--- a/app/home/templates/home/index.html
+++ b/app/home/templates/home/index.html
@@ -7,6 +7,13 @@
     <title>API CONSUMER</title>
 </head>
 <body>
-    Home
+    <h1>Consumer for Random Word API which is dockerized and hosted on remote VPS</h1>
+    <br><br>
+    <b>Random word of the day </b>
+    <br>
+    <br>
+    Word : <b>{{api_result.word.title}}</b>
+    <br>
+    Meaning : {{api_result.meaning}}
 </body>
 </html>
