STYLE: Implement grid and responsive design into page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,7 +31,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Random Word API Consumer</a>
+          <a class="navbar-brand" href="#">Random Word - API Consumer</a>
         </div>
     </nav>
     {% block content %}
