--- a/app/home/templates/home/index.html
+++ b/app/home/templates/home/index.html
@@ -2,31 +2,42 @@
 {% load static %}
 
 {% block content %}
-
-    <div class="container-fluid mt-2 mb-5">
-        <p><b>This website consumes a Random Word API from the links below</b></p> 
-        <a href="http://46.101.13.65:8000/word">Random Word directly from API</a>
-        <br>
-        <a href="http://46.101.13.65:8000">Random Word API Home Page</a>
-    </div>
-
     <div class="container-fluid">
-        <div class="bg-secondary">
-            <p class="text-center mb-0"><b>Random word</b></p>
+        <div class="row">
+            <div class="col-12 mt-2 mb-5">
+                <p><b>This website consumes a Random Word API from the links below</b></p> 
+                <a href="http://46.101.13.65:8000/word">Random Word directly from API</a>
+                <br>
+                <a href="http://46.101.13.65:8000">Random Word API Home Page</a>
+            </div>
         </div>
-        <div class="bg-white p-0 mt-2 mb-5">
-            <h2 class="text-center">{{api_result.word.title}}</h2>
-            <p>Meaning : {{api_result.meaning}}</p>
-        </div>
-
-    </div>
-
-    <div class="container-fluid">
-        <div class="bg-secondary">
-            <p class="text-center mb-0"><b>Structure of API & Consumer</b></p>
-        </div>
-        <div class="mt-3">
-            <img src="{{ STATIC_URL }}images/layout.jpg" alt="layout of service" class="img-fluid mx-auto d-block">
+        <div class="row">
+            <div class="col-lg-6 col-sm-12">
+                <div class="row">
+                    <div class="col-12">
+                        <div class="bg-secondary">
+                            <p class="text-center mb-0"><b>Random word</b></p>
+                        </div>
+                        <div class="bg-white p-0 mt-2 mb-5">
+                            <h2 class="text-center">{{api_result.word.title}}</h2>
+                            <p>Meaning : {{api_result.meaning}}</p>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="bg-secondary">
+                            <p class="text-center"><b>API Tools</b></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-sm-12">
+                <div class="bg-secondary">
+                    <p class="text-center mb-0"><b>Structure of API & Consumer</b></p>
+                </div>
+                <div class="mt-3">
+                    <img src="{{ STATIC_URL }}images/layout.jpg" alt="layout of service" class="img-fluid mx-auto d-block">
+                </div>
+            </div>
         </div>
     </div>
 
