--- a/app/home/templates/home/index.html
+++ b/app/home/templates/home/index.html
@@ -13,7 +13,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-6 col-sm-12 random-word">
+            <div class="col-sm-12 col-lg-6">
                 <div class="row">
                     <!--- Automatically Retrieved Random Word --->
                     <div class="col-12 mb-4">
@@ -44,31 +44,35 @@
                             </span>
                         </div>
                         <!-- Word Details -->
-                        <div class="row">
-                            <div class="col-10">
-                                <label for="word-text">Word:</label>
-                                <input type="text" class="w-100-percent" name="word-text" rows="1" id="word-text">
-                            </div>
-                            <div class="col-2">
-                                <label for="pk-text-area">PK:</label> <br>
-                                <input type="text" class="w-100-percent" name="pk-text" rows="1" id="pk-text">
-                            </div>
-                            <div class="col-12">
-                                <label for="word-meaning-text-area">Meaning:</label>
-                                <textarea name="word-meaning-text-area" class="w-100-percent" rows="10" id="word-meaning-text-area"></textarea>
-                            </div>
-                        </div>
-                        <!-- Edit / Delete Word -->
                         <div>
-                            <span>
-                                <a onclick="ajaxUpdateWord()" type="button" class="btn btn-primary" disabled>Update this word</a>
-                                <a onclick="ajaxDeleteWord()" type="button" class="btn btn-primary" disabled>Delete this word</a>
-                            </span>
+                            <form method="POST" action="{% url 'update_word' %}" class="form" enctype="multipart/form-data" id="word-details-form">
+                                {% csrf_token %}
+                                <div class="row">
+                                    <div class="col-10">
+                                        <label for="word-text">Word:</label>
+                                        <input type="text" class="w-100-percent" name="word-text" rows="1" id="word-text">
+                                    </div>
+                                    <div class="col-2">
+                                        <label for="pk-text-area">PK:</label> <br>
+                                        <input type="text" class="w-100-percent" name="pk-text" rows="1" id="pk-text" readonly>
+                                    </div>
+                                    <div class="col-12">
+                                        <label for="word-meaning-text-area">Meaning:</label>
+                                        <textarea name="word-meaning-text-area" class="w-100-percent" rows="10" id="word-meaning-text-area"></textarea>
+                                    </div>
+                                    <div class="col-12">
+                                        <span>
+                                            <a onclick="updateWord()" type="button" class="btn btn-primary">Update This Word</a>
+                                            <a onclick="deleteWord()" type="button" class="btn btn-primary">Delete this word</a>
+                                        </span>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 col-sm-12">
+            <div class="col-sm-12 col-lg-6">
                 <!--- Structure of service image --->
                 <div class="bg-secondary">
                     <p class="text-center mb-0"><b>Structure of Service & Consumer</b></p>
@@ -79,6 +83,25 @@
             </div>
         </div>
     </div>
+
+    <!-- Info Modal -->
+    <div class="modal" id="myModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="modal-title-text">Alert</h5>
+            </div>
+            <div class="modal-body">
+              <p id="modal-body-id"></p>
+              <p id="modal-body-word"></p>
+              <p id="modal-body-meaning"></p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
 
 {% endblock %}
 
@@ -100,12 +123,11 @@
 
         /* Request specific word via ajax */
         function wordByPK() {
-            var pk = $("#specific-word-pk").val();
             $.ajax({
                 type:"GET",
                 url:"/word_by_pk/",
                 data:{
-                    'pk' : pk
+                    'pk' : $("#specific-word-pk").val()
                 },
                 success: function(json_response){
                     updateWordDetails(json_response)
@@ -114,17 +136,32 @@
         }
 
         /* Update word */
-        function updateWord(pk, word, meaning) {
-            var pk = $("#specific-word-pk").val();
+        function updateWord() {
+            event.preventDefault();
+            var myModal = new bootstrap.Modal(document.getElementById('myModal'), {keyboard: false})
             $.ajax({
                 type:"POST",
-                url:"/word_by_pk/",
+                url:"/update_word/",
                 data:{
-                    'pk' : pk
+                    'csrfmiddlewaretoken': $('[name="csrfmiddlewaretoken').val(),
+                    'pk' : $("#pk-text").val(),
+                    'word' : $("#word-text").val(),
+                    'meaning' : $("#word-meaning-text-area").val()
                 },
                 success: function(json_response){
-                    updateWordDetails(json_response)
+                    data = json_response
+                    console.log(data.id)
+                    $('#modal-title-text').text('Word Successfully Updated');
+                    $('#modal-body-id').text('ID : ' + json_response.id);
+                    $('#modal-body-word').text('Word : ' + json_response.word);
+                    $('#modal-body-meaning').text('Meaning : ' + json_response.meaning);
+                    myModal.show();
                 },
+                error: function(){
+                    $('#modal-title-text').text('ERROR');
+                    $('#modal-body-id').text('An error occurred please try again later');
+                    myModal.show();
+                }
             })
         }
 
