FEAT: Refactor token authentication in views. MINOR: Capitalize first letter in text input on home page

--- a/app/home/templates/home/index.html
+++ b/app/home/templates/home/index.html
@@ -50,7 +50,7 @@
                                 <div class="row">
                                     <div class="col-10">
                                         <label for="word-text">Word:</label>
-                                        <input type="text" class="w-100-percent" name="word-text" rows="1" id="word-text">
+                                        <input type="text" class="w-100-percent capitalize" name="word-text" rows="1" id="word-text">
                                     </div>
                                     <div class="col-2">
                                         <label for="pk-text-area">PK:</label> <br>
